test/test_suite/errors/missing_bang.c3

fault FOO;

fn int? test()
{
	return FOO; // #error: You need to add a trailing
}